Try to stop summary being too large when printing

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -66,7 +66,7 @@
     }
   }
 
-  .executive-summary {
+  @media only screen .executive-summary {
     @include media_larger_than_mobile { font-size: 1.125rem; }
   }
 }
